# Research-Agent

./: .dockerignore  .gitignore  .pr_body.md  CLAUDE.md  Makefile  README.md  app_fields.txt  cybersec_report.md  fields.txt  implementation_plan.md  issue_111.json  pyproject.toml  signature.txt
.agents/rules/: backend-guide.md  coding-style.md  development-guide.md  mcp-server-guide.md  mcp-servers.md
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit-ci.yml
agent/core_agent/: .env.example  README.md  agent.py  app_factory.py  config.py  create_resources.sh  debug_plugin.py  delete_resources.sh  main.py  model_armor.py  requirements.txt  test_artifact_plugin.py
agent/deployment/: deploy.py
agent/tests/: test_agent_atlassian_mcp.py  test_app_builder.py  test_artifact_callbacks.py  test_artifact_tools.py  test_artifact_transfer.py  test_auxiliars.py  test_builder.py  test_config.py  test_deploy.py  test_kb_tools.py  test_mcp_factory.py  test_metrics_plugin.py  test_security.py  test_skills_factory.py  test_storage_service.py  test_user_uploads.py  test_user_uploads_discovery.py  (+1 more)
docs/: ADK-Conversational-Context.md  Agent-Engine-Deployment.md  agent_implementation_results.txt  agent_oauth_feature_specs.txt  support_case_ge_oauth_resume_failure_2026-03-21.md
gemini_enterprise/: define_identity_provider.sh
notebooks/: DLP.ipynb  calendar_client.ipynb  classification_pipeline.ipynb  deployed_agent.ipynb  drive_connector.ipynb  model_armor.ipynb
pipelines/: __init__.py
terraform/: README.md  deployment_guide.md
terraform2/: README.md
(+517 files in other folders)
